# STORM

./: .SourceSageignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.aira/: config.dev.yml
.github/workflows/: publish-to-pypi.yml
.harmon_ai/: README_template.md  publish-to-pypi.yml  repository_summary_raw.md  sections_template_llm.md
developer/: commit_oi.py  commit_oi_linux.py  commit_oi_win.py
docs/: .sourcesage_releasenotes.yml
storm/: cli.py
storm/ppt_conversion/: ppt_converter.py
storm/slide_conversion/: slide_converter.py
storm/speech_recognition/: whisper_speech_recognition.py
storm/text_processing/: text_processor.py
storm/voice_input/: recorder.py
